Fix : overflow removed

--- a/app/globals.css
+++ b/app/globals.css
@@ -175,10 +175,3 @@
     }
   }
 }
-
-/* Hide horizontal scrollbar */
-
-html,
-body {
-  overflow-x: hidden;
-}
